force-app/main/default/objects/Payment_Gateway__c/fields/Gateway_Public_Key__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Public_Key__c</fullName>
    <label>Gateway Public Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>