force-app/main/default/objects/Payment_Gateway__c/fields/Relationship_Settings__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Settings</label>
    <referenceTo>Relationship_Settings__c</referenceTo>
    <relationshipLabel>Payment Gateways</relationshipLabel>
    <relationshipName>Payment_Gateways</relationshipName>
    <type>Lookup</type>
</CustomField>